# desk-helper

./: .gitignore  README.md  index.html  package-lock.json  package.json  release-new-repo.ps1  release-old-repo.ps1  release.ps1  sync-to-gitee.ps1  tsconfig.app.json  vite.config.ts
.github/workflows/: sync-to-gitee.yml
docs/: tech-stack.md
legacy/: README.md  build.bat  build.ps1  release.ps1
legacy/MinimalTodoApp/: App.xaml  App.xaml.cs  MinimalTodoApp.csproj  app.manifest  使用指南.txt
legacy/MinimalTodoApp/Assets/: gen_ico.ps1  gen_icons.ps1
legacy/MinimalTodoApp/Converters/: Converters.cs
legacy/MinimalTodoApp/Infrastructure/: AcrylicHelper.cs  AnimationHelper.cs  BuiltinThemes.cs  CelebrationSound.cs  FontManager.cs  GroupIcons.cs  HolidayService.cs  LanguageManager.cs  Loc.cs  MarkdownFlowDocument.cs  MarkdownService.cs  (+7 more)
public/: manifest.webmanifest  sw.js
scripts/: convert-legacy-assets.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capture.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  commands.rs  database.rs  import.rs  lib.rs  main.rs  models.rs  paste.rs  storage.rs  updater.rs  window.rs
src/components/: ClipEditorWindow.tsx  DuePicker.tsx  NoteEditor.tsx  NotesTree.tsx  PinWindow.tsx  QuickAdd.tsx  ReminderPicker.tsx  ResizeBorders.tsx  SettingsWindow.tsx  Sidebar.tsx  TagSidebar.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx
src/hooks/: useSortableItem.ts
src/i18n/: en.json  zh.json
src/lib/: date.ts  dnd.ts  effects.ts  env.ts  font.ts  groupIcons.ts  holidays.ts  i18n.ts  markdown.ts  markdownIO.ts  noteFormat.ts  notesExport.ts  notify.ts  persist.ts  pwaInstall.ts  quadrant.ts  sort.ts  tauri-ipc.ts  themes.ts  updater.ts
src/store/: useAppStore.ts
(+105 files in other folders)
