[package]
name = "minimal-todo"
version = "2.0.5"
edition = "2021"
description = "极简 Windows 本地待办(Tauri v2 重写版)"
authors = ["wangchao199703"]

[lib]
name = "minimal_todo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
# 全局快捷键(召唤窗口 + 切换视图,即使未聚焦也生效)
tauri-plugin-global-shortcut = "2"
# 目录选择对话框:数据存储位置「选择新位置」用(原生文件夹选择器)
tauri-plugin-dialog = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# 剪贴板监听(移植自 ShellPicker):后台线程监听系统剪贴板,文本/图片入库
clipboard-rs = "0.3.4"
sha2 = "0.10"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
# 自动更新资产下载走 Rust(GitHub 资产 CDN 无 CORS 头,前端 fetch 会被拦);
# native-tls=Windows SChannel,免装 OpenSSL/NASM,便携 exe 构建链路最稳
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
# 仅用其异步定时器做下载重试退避(tokio 已是 tauri 的传递依赖,这里只显式取 time 特性)
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 发布配置:压体积优先(对齐参考项目验证过的组合)
[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = 2

# 快速迭代用的近发布配置:tauri build -- --profile dev-release
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 8
opt-level = 1
debug = false
strip = "symbols"
